# api-weaboo

./: .gitignore  pyproject.toml
app/: main.py
app/models/: ai.py  anime.py  manga.py  news.py  tools.py
app/routers/: ai.py  anime.py  manga.py  news.py
app/routers/anime/: otakudesu.py  samehadaku.py
app/routers/tools/: social_media_downloader.py
